[gd_scene load_steps=11 format=3 uid="uid://0mp0xoprhcl7"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_e7hhq"]
[ext_resource type="Texture2D" uid="uid://c6vux6aeke3ym" path="res://Assets/Earth.png" id="1_oykve"]
[ext_resource type="FontFile" uid="uid://pnbn0lg56d7u" path="res://Assets/Font/Race Sport.ttf" id="2_f67qt"]
[ext_resource type="Texture2D" uid="uid://dfe8vi375ld7f" path="res://Assets/Satellite.png" id="3_c7big"]
[ext_resource type="FontFile" uid="uid://bn4x06gox4pfa" path="res://Assets/Font/hemi head bd it.otf" id="3_n63nk"]

[sub_resource type="InputEventKey" id="InputEventKey_4xkku"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_nj8ld"]
events = [SubResource("InputEventKey_4xkku")]

[sub_resource type="Animation" id="Animation_2culf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cpc3f"]
resource_name = "Rotation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HowToContainer:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HomeContainer:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.309]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EarthSprite:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.309]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsContainer:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdl42"]
_data = {
"RESET": SubResource("Animation_2culf"),
"Rotation": SubResource("Animation_cpc3f")
}

[node name="MenuContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7hhq")

[node name="EarthSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-300, 600)
scale = Vector2(2, 2)
texture = ExtResource("1_oykve")

[node name="SatelliteNode" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-300, 600)
rotation = -0.349066

[node name="SatelliteSprite" type="Sprite2D" parent="SatelliteNode"]
unique_name_in_owner = true
position = Vector2(1500, 0)
rotation = 0.663225
texture = ExtResource("3_c7big")

[node name="HomeContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-300, 450)
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="HomeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f67qt")
theme_override_font_sizes/font_size = 40
text = "Limited Space in Space"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="HomeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
shortcut = SubResource("Shortcut_nj8ld")
text = "Start"
flat = true

[node name="HowToButton" type="Button" parent="HomeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "How to play"
flat = true

[node name="SettingsButton" type="Button" parent="HomeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "Settings"
flat = true

[node name="ExitButton" type="Button" parent="HomeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "Exit"
flat = true

[node name="HowToContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.309
pivot_offset = Vector2(-300, 450)
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="HowToContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f67qt")
theme_override_font_sizes/font_size = 40
text = "How to play"
horizontal_alignment = 1

[node name="HowtoLabel" type="Label" parent="HowToContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "W S (or Up down) throttle
A D (our Left Right) for Left and Right"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="HowToContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "Back"
flat = true

[node name="SettingsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-300, 450)
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="SettingsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f67qt")
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="SettingsContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "Sounds volume"

[node name="SoundSlider" type="HSlider" parent="SettingsContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -20.0
max_value = 10.0

[node name="BackButton" type="Button" parent="SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n63nk")
theme_override_font_sizes/font_size = 28
text = "Back"
flat = true

[node name="MenuAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gdl42")
}

[connection signal="pressed" from="HomeContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HomeContainer/HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="HomeContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HomeContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HowToContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="SettingsContainer/HBoxContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="SettingsContainer/BackButton" to="." method="_on_back_button_pressed"]
